# chd-rs

./: Cargo.toml  README.md
samples/: bell.cue  cdfl.chd  cdlz.chd  cdzl.chd  child.b64  child.chd  data.b64  flac.chd  huff.chd  lzma.chd  meta.chd  none.chd  self.chd  zlib.chd
src/: cd.rs  decompress.rs  ecc.rs  huffman.rs  lib.rs  lzma.c  lzma.rs  tags.rs  utils.rs
