[package]
name = "chd"
version = "0.1.0"
authors = ["Andrey Kuleshov <ksv0x07c2@gmail.com>"]
repository = "https://github.com/ksv0x07c2/chd-rs"
edition = "2018"
description = """
A library for CHD file parsing functionality
"""
readme = "README.md"
build = "build.rs"

[dependencies]
claxon = "0.4"
crc16 = "0.4"
inflate = "0.4"
sha1 = "0.6"

[build-dependencies]
cc = "1.0"

[features]
default = ["write_nop"]

# implement io::Write as nop
write_nop = []
